# docs/swagger.json
@@ -9,6 +9,40 @@
     "host": "localhost:8000",
     "basePath": "/api",
     "paths": {
+        "/login": {
+            "post": {
+                "description": "Login new costumer",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Auth"
+                ],
+                "summary": "Login new costumer",
+                "parameters": [
+                    {
+                        "description": "Payload Login",
+                        "name": "data",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/auth.Payload"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/model.Costumer"
+                        }
+                    }
+                }
+            }
+        },
         "/product": {
             "get": {
                 "security": [
@@ -16,7 +50,7 @@
                         "ApiKeyAuth": []
                     }
                 ],
-                "description": "Mendapatkan semua list produk",
+                "description": "Get all list produk",
                 "consumes": [
                     "application/json"
                 ],
@@ -26,7 +60,7 @@
                 "tags": [
                     "Product"
                 ],
-                "summary": "Get All product",
+                "summary": "Get all product",
                 "parameters": [
                     {
                         "type": "integer",
@@ -71,9 +105,80 @@
                     }
                 }
             }
+        },
+        "/register": {
+            "post": {
+                "description": "Register new costumer",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Auth"
+                ],
+                "summary": "Register new costumer",
+                "parameters": [
+                    {
+                        "description": "Payload Register",
+                        "name": "data",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/auth.Payload"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/model.Costumer"
+                        }
+                    }
+                }
+            }
         }
     },
     "definitions": {
+        "auth.Payload": {
+            "type": "object",
+            "properties": {
+                "email": {
+                    "type": "string"
+                },
+                "name": {
+                    "type": "string"
+                },
+                "password": {
+                    "type": "string"
+                }
+            }
+        },
+        "model.Costumer": {
+            "type": "object",
+            "properties": {
+                "created_at": {
+                    "type": "string",
+                    "format": "date-time"
+                },
+                "email": {
+                    "type": "string"
+                },
+                "id": {
+                    "type": "string",
+                    "format": "uuid"
+                },
+                "name": {
+                    "type": "string"
+                },
+                "updated_at": {
+                    "type": "string",
+                    "format": "date-time"
+                }
+            }
+        },
         "model.Product": {
             "type": "object",
             "properties": {
